# opal_deprecated

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  project_idea.md
src/: src.cmake
src/programs/: programs.cmake
src/programs/hello_world/: hello_world.cmake  main.cpp
src/runtime/: runtime.cmake
src/runtime/core/: atomic.h  atomic.inl  concepts.h  core.cmake  core.cpp  core.h  core.natvis  hash.cpp  hash.h  initializer_list.h  interface.h  memory.cpp  memory.h  non_copyable.h  type_traits.h
src/runtime/core/containers/: allocator.h  array.h  array.inl  bitflag.h  function.h  function.inl  map.h  map.inl  non_null.h  option.h  result.h  shared.h  shared.inl  slice.h  slice.inl  slot_map.h  slot_map.inl  string.cpp  string.h  string_view.cpp  string_view.h  tuple.h  unique.h  unique.inl  vector.h  vector.inl  wstring.cpp  wstring.h  wstring_view.h
src/runtime/core/math/: aabb2.h  aabb2.inl  color.cpp  color.h  math.cpp  math.h  matrix4.h  matrix4.inl  quaternion.h  quaternion.inl  vec2.h  vec2.inl  vec3.h  vec3.inl  vector2.h  vector2.inl  vector3.h  vector3.inl  vector4.h  vector4.inl
src/runtime/core/os/: file_system.cpp  file_system.h  library.cpp  library.h  memory.cpp  memory.h  thread.cpp  thread.h  time.cpp  time.h  windows.h
src/runtime/core/sync/: atomic.h  atomic.inl
src/runtime/editor/: application.cpp  application.h  editor.cmake  editor.h
src/runtime/game/: archetype.cpp  archetype.h  component.cpp  component.h  entity.h  game.cmake  game.cpp  game.h  query.cpp  query.h  storage.h  world.cpp  world.h
src/runtime/gpu/: buffer.cpp  buffer.h  context.cpp  context.h  device.h  gpu.cmake  gpu.h  graphics_command_list.cpp  graphics_command_list.h  graphics_pipeline.cpp  graphics_pipeline.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h
src/runtime/gpu/d3d12/: buffer.cpp  buffer.h  d3d12.h  d3d12_buffer.cpp  d3d12_buffer.h  d3d12_context.cpp  d3d12_context.h  d3d12_device.cpp  d3d12_device.h  d3d12_graphics_command_list.cpp  d3d12_graphics_command_list.h  d3d12_graphics_pipeline.cpp  d3d12_graphics_pipeline.h  d3d12_memory.cpp  d3d12_memory.h  d3d12_shader.h  d3d12_swapchain.cpp  d3d12_swapchain.h  d3d12_texture.cpp  d3d12_texture.h  device.cpp  device.h  graphics_command_list.cpp  graphics_command_list.h  graphics_pipeline.h  memory.cpp  memory.h  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h
src/runtime/gui/: application.cpp  application.h  builder.cpp  builder.h  canvas.cpp  canvas.h  gui.cmake  gui.h
src/runtime/gui/draw/: canvas.cpp  canvas.h  font.cpp  font.h
src/runtime/gui/widgets/: label.cpp  label.h
src/test/: test.cmake
src/test/core/: core.cmake  core.cpp
src/test/core_test/: core_test.cmake  memory_test.cpp
src/test/core_test/containers/: array_test.cpp  function_test.cpp  map_test.cpp  non_null_test.cpp  option_test.cpp  result_test.cpp  shared_test.cpp  slice_test.cpp  string_test.cpp  string_view_test.cpp  unique_test.cpp  vector_test.cpp  wstring_test.cpp  wstring_view_test.cpp
src/test/core_test/math/: math_test.cpp  vec2_test.cpp  vec3_test.cpp
src/test/core_test/os/: file_system_test.cpp  library_test.cpp  memory_test.cpp
